--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,5 +1,7 @@
+@charset "UTF-8";
 /*sass styles/sass:styles/css --watch*/
 @import url(../../vendors/fonts.css);
+@import url("https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css");
 *,
 *::before,
 *::after {
@@ -64,11 +66,16 @@ select {
 /*----------------------------------- spacers -----------------------------------*/
 /*----------------------------------- transitions -----------------------------------*/
 /*----------------------------------- titles -----------------------------------*/
-.header .header__link {
+.header .header__link, .lead__slide .lead__title-wrapper a, .lead__slide .lead__title-wrapper p {
   font-family: "Circe";
   font-style: normal;
   font-weight: 700;
   text-transform: uppercase;
+}
+
+.lead__slide .lead__title-wrapper a, .lead__slide .lead__title-wrapper p {
+  font-size: 72px;
+  line-height: 72px;
 }
 
 .header .header__link {
@@ -77,26 +84,58 @@ select {
 }
 
 /*----------------------------------- circe text -----------------------------------*/
+.lead__slide .lead__button {
+  font-family: "Circe";
+  font-style: normal;
+  font-weight: 400;
+}
+
+.lead__slide .lead__button {
+  font-size: 18px;
+  line-height: 24px;
+}
+
 /*----------------------------------- lora text -----------------------------------*/
 /*----------------------------------- custom cursor -----------------------------------*/
-.header .header__link:hover, .header .header__burger:hover, .header .header__logo:hover {
+.carousel__dots .carousel__dot:hover, .carousel__button:hover, .lead__slide .lead__button:hover, .lead__slide .lead__title-wrapper a:hover, .header .header__link:hover, .header .header__burger:hover, .header .header__logo:hover {
   cursor: url(../../images/Cursor-hand.svg), pointer;
 }
 
 /*----------------------------------- silly-link -----------------------------------*/
-.header .header__link, .header .header__burger, .header .header__logo {
+.lead__slide .lead__title-wrapper a, .header .header__link, .header .header__burger, .header .header__logo {
   color: inherit;
   text-decoration: none;
 }
 
 /*----------------------------------- transition -----------------------------------*/
-.header .header__link, .header .header__list-social ul svg, .header .header__burger-lines {
+.header .header__link, .header .header__list-social ul svg, .header .header__burger-lines, .lead .carousel__button, .lead__slide .lead__button {
   -moz-transition-duration: 0.2s;
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
   -moz-transition-function: ease-in-out;
   -o-transition-function: ease-in-out;
   transition-timing-function: ease-in-out;
+}
+
+/*----------------------------------- buttons -----------------------------------*/
+.lead__slide .lead__button {
+  transition-property: color, background-color;
+  text-decoration: none;
+  text-align: center;
+  font-family: "Circe";
+  font-style: normal;
+  font-weight: 400;
+  border: none;
+  width: auto;
+  min-height: 44px;
+  height: fit-content;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  padding: 10px 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .page {
@@ -111,6 +150,194 @@ select {
   position: relative;
   height: 150vh;
   background-color: honeydew;
+}
+
+/*настройки карусельки*/
+.carousel {
+  color: #201E33;
+  --carousel-button-bg: transparent;
+  --carousel-button-shadow: none;
+  --carousel-button-svg-width: 28px;
+  --carousel-button-svg-height: 28px;
+  --carousel-button-svg-stroke-width: 2.5;
+  width: 100%;
+}
+
+.carousel__button {
+  stroke: #F6F6F7;
+  transition: all 0.4s ease;
+  color: #fff;
+  /*кнопка X*/
+  /*кнопка открыть галерею для предпросмотра (кубики)*/
+}
+.carousel__button.fancybox__button--close svg {
+  fill: currentColor;
+  stroke-width: 0.2px;
+}
+.carousel__button.fancybox__button--close:hover {
+  color: #DAE856;
+}
+.carousel__button.fancybox__button--close:active {
+  color: #BED200;
+}
+.carousel__button.fancybox__button--thumbs {
+  transition: all 0.3s ease;
+  margin: 0 8px 0 0;
+}
+.carousel__button.fancybox__button--thumbs svg {
+  height: 100%;
+  width: 100%;
+}
+.carousel__button.fancybox__button--thumbs rect {
+  fill: currentColor;
+}
+.carousel__button.fancybox__button--thumbs:hover {
+  color: #DAE856;
+}
+.carousel__button.fancybox__button--thumbs:active {
+  color: #BED200;
+}
+
+.carousel__slide {
+  width: 100%;
+  padding: 0;
+}
+@media screen and (max-width: 800px) {
+  .carousel__slide {
+    padding: 0 5px;
+  }
+}
+
+.carousel__dots {
+  color: #2D8BF1;
+}
+/*настройки фансибоксов*/
+.fancybox__container {
+  --fancybox-color: #ffffff;
+  --fancybox-bg: rgba(19, 18, 18, 0.9);
+  --fancybox-content-color: #f3f3f3;
+  --fancybox-content-bg: #fff;
+  --fancybox-thumbs-width: 24px;
+  --fancybox-thumbs-ratio: 1;
+  --carousel-button-svg-stroke-width: 1.4;
+  --carousel-button-svg-stroke: $light-color-default;
+  --carousel-button-svg-filter: none;
+  --fancybox-thumbs-border-radius:0;
+  --fancybox-thumbs-width: 60px;
+  --fancybox-thumbs-height: 60px;
+  --fancybox-accent-color: $secondary-color-default;
+}
+
+.fancybox__nav {
+  --carousel-button-bg: transparent;
+  --carousel-button-svg-width: 28px;
+  --carousel-button-svg-height: 28px;
+  --carousel-button-svg-stroke-width: 0;
+  /*кастомизируем кнопки*/
+}
+.fancybox__nav .carousel__button {
+  /*кнопка ->*/
+  /*кнопка <-*/
+}
+.fancybox__nav .carousel__button.is-next {
+  right: 2%;
+}
+.fancybox__nav .carousel__button.is-next:hover {
+  color: #DAE856;
+}
+.fancybox__nav .carousel__button.is-next:active {
+  color: #BED200;
+}
+@media screen and (max-width: 800px) {
+  .fancybox__nav .carousel__button.is-next {
+    display: none;
+  }
+}
+.fancybox__nav .carousel__button.is-prev {
+  right: 2%;
+}
+.fancybox__nav .carousel__button.is-prev:hover {
+  color: #DAE856;
+}
+.fancybox__nav .carousel__button.is-prev:active {
+  color: #BED200;
+}
+@media screen and (max-width: 800px) {
+  .fancybox__nav .carousel__button.is-prev {
+    display: none;
+  }
+}
+
+.fancybox__caption {
+  font-family: "Lora";
+  font-style: italic;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #F6F6F7;
+  text-align: left;
+}
+
+.fancybox__toolbar {
+  /*положение тулбара (крестик, кубики)*/
+  padding: 0;
+}
+.fancybox__toolbar .fancybox__toolbar__items {
+  margin-right: 2%;
+  margin-top: 2%;
+}
+.fancybox__toolbar .carousel__button {
+  width: 28px;
+  height: 28px;
+}
+
+.fancybox__thumbs {
+  /*расположение и кастомизация зоны предпросмотра*/
+}
+.fancybox__thumbs .carousel__slide {
+  margin-bottom: 8px;
+}
+.fancybox__thumbs .carousel__slide .fancybox__thumb::after {
+  border-width: 3px;
+}
+
+/*СТИЛИЗАЦИЯ ПОД РАЗНЫЕ СТРАНИЦЫ*/
+.lead .carousel {
+  --carousel-button-svg-stroke-width: 1;
+}
+.lead .carousel__button {
+  transition-property: all;
+}
+.lead .carousel__button.is-prev:hover circle {
+  fill: #F0F0F4;
+  stroke: #F0F0F4;
+}
+.lead .carousel__button.is-prev:active circle {
+  fill: #FFFFFF;
+  stroke: #FFFFFF;
+}
+.lead .carousel__button.is-next:hover circle {
+  fill: #F0F0F4;
+  stroke: #F0F0F4;
+}
+.lead .carousel__button.is-next:active circle {
+  fill: #FFFFFF;
+  stroke: #FFFFFF;
+}
+.lead .carousel__dots {
+  top: 95%;
+}
+.lead .carousel__dots .carousel__dot::after {
+  background-color: #F6F6F7;
+  opacity: 0.8;
+}
+.lead .carousel__dots .carousel__dot.is-selected::after {
+  background-color: #201E33;
+  opacity: 1;
+}
+
+.main {
+  margin-top: -40px;
 }
 
 .header {
@@ -147,7 +374,7 @@ select {
   background-position: center;
   width: 74px;
   height: 74px;
-  z-index: 5;
+  z-index: 98;
 }
 @media screen and (max-width: 960px) {
   .header .header__logo {
@@ -172,7 +399,7 @@ select {
   }
 }
 .header .header__burger {
-  z-index: 5;
+  z-index: 98;
   display: none;
   flex-direction: column;
   justify-content: center;
@@ -282,7 +509,7 @@ select {
     top: 80px;
     transition-property: top;
     transition-duration: 0.5s;
-    z-index: 1;
+    z-index: 97;
   }
   .header.open .header__logo {
     background-image: url(../../../images/logos/main-logo-old-white.svg);
@@ -295,6 +522,186 @@ select {
   }
   .header.open .header__burger-lines:nth-of-type(3) {
     transform: rotate(-45deg) translate(5px, -5px);
+  }
+}
+
+.lead {
+  width: 100%;
+}
+
+.lead__slide {
+  width: 100%;
+  height: 714px;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 100%;
+  overflow: hidden;
+}
+@media screen and (max-width: 960px) {
+  .lead__slide {
+    width: 100%;
+    height: 435px;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 100%;
+    overflow: hidden;
+  }
+}
+.lead__slide .lead__slide-bg {
+  grid-column: 1;
+  grid-row: 1;
+}
+.lead__slide .lead__slide-bg img {
+  object-fit: cover;
+  object-position: center;
+  height: auto;
+  min-height: 100%;
+  max-width: 100%;
+  width: 100%;
+}
+@media screen and (max-width: 960px) {
+  .lead__slide .lead__slide-bg img {
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+  }
+}
+.lead__slide .lead__slide-wrapper {
+  grid-column: 1;
+  grid-row: 1;
+  padding: 80px 5%;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 100%;
+}
+@media screen and (max-width: 960px) {
+  .lead__slide .lead__slide-wrapper {
+    padding: 5%;
+  }
+}
+.lead__slide .lead__canvas {
+  margin: auto;
+  max-width: 1440px;
+  grid-column: 1;
+  grid-row: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0);
+  z-index: 1;
+  display: block;
+}
+.lead__slide .lead__canvas svg {
+  width: 100%;
+  height: 100%;
+  fill: #2D8BF1;
+}
+.lead__slide .lead__canvas path {
+  fill: inherit !important;
+  animation: figureAnimation 90s infinite forwards;
+}
+.lead__slide .lead__title {
+  margin: auto;
+  max-width: calc(1440px - 10%);
+  grid-column: 1;
+  grid-row: 1;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 70px 0;
+}
+@media screen and (max-width: 960px) {
+  .lead__slide .lead__title {
+    padding: 35px 0;
+  }
+}
+.lead__slide .lead__title-wrapper {
+  display: flex;
+  width: 90%;
+  height: 100%;
+  margin: auto;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+}
+.lead__slide .lead__title-wrapper p {
+  margin: 0;
+  color: var(--white-default);
+}
+.lead__slide .lead__title-wrapper p:nth-of-type(2) {
+  margin-top: auto;
+  text-align: end;
+}
+@media screen and (max-width: 960px) {
+  .lead__slide .lead__title-wrapper p:nth-of-type(2) {
+    align-self: center;
+    text-align: center;
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 960px) {
+  .lead__slide .lead__title-wrapper p {
+    font-size: 32px;
+    line-height: 36px;
+    text-align: center;
+  }
+}
+.lead__slide .lead__title-wrapper a {
+  margin: 0;
+  color: inherit;
+}
+@media screen and (max-width: 960px) {
+  .lead__slide .lead__title-wrapper a {
+    font-size: 32px;
+    line-height: 36px;
+    text-align: center;
+  }
+}
+.lead__slide .lead__button {
+  margin-top: 114px;
+  background-color: #DAE856;
+  color: #201E33;
+}
+@media screen and (max-width: 960px) {
+  .lead__slide .lead__button {
+    margin: 0;
+  }
+}
+.lead__slide .lead__button:hover {
+  background-color: #CADF00;
+  color: #605D7C;
+}
+.lead__slide .lead__button:active {
+  background-color: #BED200;
+  color: #201E33;
+}
+
+/*движение фигур на главной в LEAD*/
+@keyframes figureAnimation {
+  0% {
+    transform: translate(-150px, -184px) rotate(0deg) scale(2.1);
+    transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+  }
+  25% {
+    transform: translate(1400px, -365px) rotate(90deg) scale(2.5, 2.4);
+    transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  }
+  50% {
+    transform: translate(1380px, 980px) rotate(180deg) scale(1.6);
+    transition-timing-function: ease-in-out;
+  }
+  75% {
+    transform: translate(0px, 900px) rotate(270deg) scale(2, 2.3);
+    transition-timing-function: cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  }
+  100% {
+    transform: translate(-300px, -250px) rotate(360deg) scale(2.1);
+    transition-timing-function: ease-in;
   }
 }
 
