--- a/styles/sass/blocks/_cities.scss
+++ b/styles/sass/blocks/_cities.scss
@@ -9,7 +9,7 @@
     padding: 0;
     margin: 0 auto;
     width: 90%;
-    max-width: calc(1440px - 10%);
+    max-width: 1312px;
 
     .cities__item {
       &:nth-of-type(2n+1){
@@ -106,7 +106,7 @@
 
   .city__title {
     grid-area: title;
-    @extend %title-h2;
+    @extend %giant-text;
     
     a {
       @extend %silly-link;
