--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -8,7 +8,8 @@
 @import './utils/variables';            // переменные
 @import './utils/samples';              // шаблоны для основных стилей
 @import './utils/root';                 // стили для .page
-@import './utils/_fansy-custom.scss';   //настройки fancy-box с основного сайта
+@import './utils/_fansy-custom.scss';   // настройки fancy-box с основного сайта
+@import './utils/_animation.scss';      // анимации
 
 @import './blocks/main';
 @import './blocks/title';
@@ -17,5 +18,7 @@
 @import './blocks/navigation';
 @import './blocks/cities';
 @import './blocks/project';
+@import './blocks/about';
+@import './blocks/footer';
 
 
