--- a/styles/sass/utils/_samples.scss
+++ b/styles/sass/utils/_samples.scss
@@ -10,12 +10,22 @@
   @extend %titles-circe-uppercase;
   font-size: 72px;
   line-height: 72px;
+
+  @media screen and (max-width: $tablet) {
+    font-size: 34px;
+    line-height: 48px;
+  }
 }
 
 %title-h1{
   @extend %titles-circe-uppercase;
    font-size: 42px;
    line-height: 52px;
+
+   @media screen and (max-width: $tablet) {
+    font-size: 26px;
+    line-height: 34px;
+  }
 }
 
 
@@ -23,6 +33,11 @@
   @extend %titles-circe-uppercase;
   font-size: 26px;
   line-height: 34px;
+
+  @media screen and (max-width: $tablet) {
+    font-size: 22px;
+    line-height: 24px;
+  }
 }
 
 %title-h3{
